<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ReportActivity">

<!-- createReport -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/guide">

        <Button
            android:id="@+id/toCreateReport"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/border_round_button"
            android:fontFamily="@font/montserrat_bold"
            android:hapticFeedbackEnabled="false"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/createReport"
            android:textColor="@color/brown"
            android:textSize="18sp"

            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/apiary_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/brown"
                android:fontFamily="@font/montserrat_bold"
                android:letterSpacing="0.1"
                android:text="@string/apiary_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/to_apiary_name"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/to_apiary_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:width="260dp"
                android:autofillHints="@string/apiary_name"
                android:background="@drawable/border_round_edit"
                android:ems="10"
                android:textColor="@color/brown"
                android:fontFamily="@font/montserrat"
                android:hint="@string/to_apiary_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apiary_name" />

            <TextView
                android:id="@+id/apiary_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/brown"
                android:fontFamily="@font/montserrat_bold"
                android:letterSpacing="0.1"
                android:text="@string/apiary_address"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/to_apiary_address"
                app:layout_constraintTop_toBottomOf="@+id/to_apiary_name" />

            <EditText
                android:id="@+id/to_apiary_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:width="260dp"
                android:autofillHints="@string/apiary_name"
                android:background="@drawable/border_round_edit"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/brown"
                android:hint="@string/to_apiary_address"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apiary_address" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hasBeenCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_no_report"
        android:padding="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/createReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createReport">

        <TextView
            android:id="@+id/texthasBeenCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/hasBeenCreated"
            android:textColor="@color/brown"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageButton
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guide" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/one"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/one"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/one" />

        <ImageButton
            android:id="@+id/two"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/two"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/two" />

        <ImageButton
            android:id="@+id/three"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/three"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:srcCompat="@drawable/three" />

        <ImageView
            android:id="@+id/plusOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-25dp"
            android:layout_marginBottom="-25dp"
            android:contentDescription="@string/plus_one"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/three"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:srcCompat="@drawable/plus_one" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!-- thisReport -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thisReport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="105dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/number_row"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/border_hive"
            android:visibility="visible"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/leftArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/left_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/left_arrow" />


            <TextView
                android:id="@+id/textNumberRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/number_row"
                android:textColor="@color/brown"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rightArrow"
                app:layout_constraintStart_toEndOf="@+id/leftArrow"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/right_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/nameMyApiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:height="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/my_apiary"
            android:textColor="@color/brown"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/toBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="80dp"
            android:fillViewport="true"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@+id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">


            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:background="@drawable/border_round_button"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/save"
            android:textColor="@color/brown"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/toBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="@+id/nameMyApiary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameMyApiary"
            app:srcCompat="@drawable/back"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />




    </androidx.constraintlayout.widget.ConstraintLayout>

<!--  newOrLoad  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newOrLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide">

        <Button
            android:id="@+id/newReport"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:text="@string/newReport"
            android:background="@drawable/border_round_button"
            android:fontFamily="@font/montserrat_bold"
            app:backgroundTint="@null"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/brown"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/or"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/brown"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newReport" />

        <Button
            android:id="@+id/loadReport"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/loadReport"
            android:background="@drawable/border_round_button"
            android:fontFamily="@font/montserrat_bold"
            app:backgroundTint="@null"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/brown"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>